--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,8 +6,8 @@ registries:
     username: alhousseinmed15@gmail.com
     password: ${{secrets.JFROG_PASSWORD}}
 updates:
-  - package-ecosystem: "gomod" # See documentation for possible values
-    directory: "/" # Location of package manifests
+  - package-ecosystem: "gomod" 
+    directory: "/" 
     registries:
       - my-private-registry
     schedule:
