--- a/go.env
+++ b/go.env
@@ -1,1 +1,1 @@
-GOPROXY=https://alhousseinmed15%40gmail.com:${{secrets.JFROG_PASSWORD}}@trialfxogua.jfrog.io/artifactory/api/go/gotest-go
+GOPROXY=https://alhousseinmed15%40gmail.com:${{JFROG_PASSWORD}}@trialfxogua.jfrog.io/artifactory/api/go/gotest-go
